# game-panel

./: CMakeLists.txt  README.md  main.cpp  main.qml
src/abstracts/: gabstractgamesource.cpp  gabstractgamesource.h
src/sources/: ggamesourcemanager.cpp  ggamesourcemanager.h  gsteamgamesource.cpp  gsteamgamesource.h
src/tools/: acfparser.cpp  acfparser.h
src/types/: ggamedetailsitem.cpp  ggamedetailsitem.h
src/ui/: GTabBar.qml  HomePage.qml  MainPage.qml  main.qml  qml.qrc
src/ui/MaterialIcons/: MaterialIcons.qml
src/ui/components/: ComponentsGlobals.qml  GButton.qml  GIconOnlyButton.qml  GItemDelegate.qml  GLabel.qml  GMaterialIcon.qml  GProfileButton.qml  GTextField.qml  qmldir
